// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureLinkList renders correctly 1`] = `
<div>
  <ul
    class="css-1goluyv-boxStyles"
  >
    <li
      class="css-vtop7u-boxStyles-FeatureLinkListItem"
    >
      <div
        class="css-18jic7b-boxStyles-FeatureLinkListItem"
      >
        <div
          class="css-1wcx0lf-boxStyles"
        >
          <span
            class="css-1esljmy-boxStyles"
          >
            <a
              class="css-1ovmco1-TextLink-FeatureLinkListItem"
              href="#"
            >
              Add a business with RAM
            </a>
          </span>
          <p
            class="css-dbscsh-boxStyles"
          >
            Set up a business to act on behalf of it or invite others to. You can do this if you are responsible for this business in Relationship Authorisation Manager (RAM).
          </p>
        </div>
        <svg
          aria-hidden="true"
          class="css-1ovc7ig-Icon"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12L20 12"
          />
          <path
            d="M16 7L21 12L16 17"
          />
        </svg>
      </div>
    </li>
  </ul>
</div>
`;

exports[`FeatureLinkList renders correctly with no description 1`] = `
<div>
  <ul
    class="css-1goluyv-boxStyles"
  >
    <li
      class="css-vtop7u-boxStyles-FeatureLinkListItem"
    >
      <div
        class="css-18jic7b-boxStyles-FeatureLinkListItem"
      >
        <div
          class="css-1wcx0lf-boxStyles"
        >
          <span
            class="css-1esljmy-boxStyles"
          >
            <a
              class="css-1ovmco1-TextLink-FeatureLinkListItem"
              href="#"
            >
              Add a business with RAM
            </a>
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="css-1ovc7ig-Icon"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12L20 12"
          />
          <path
            d="M16 7L21 12L16 17"
          />
        </svg>
      </div>
    </li>
    <li
      class="css-vtop7u-boxStyles-FeatureLinkListItem"
    >
      <div
        class="css-18jic7b-boxStyles-FeatureLinkListItem"
      >
        <div
          class="css-1wcx0lf-boxStyles"
        >
          <span
            class="css-1esljmy-boxStyles"
          >
            <a
              class="css-1ovmco1-TextLink-FeatureLinkListItem"
              href="#"
            >
              Accept an invite
            </a>
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="css-1ovc7ig-Icon"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12L20 12"
          />
          <path
            d="M16 7L21 12L16 17"
          />
        </svg>
      </div>
    </li>
  </ul>
</div>
`;

exports[`FeatureLinkList renders valid HTML with no a11y violations, when no description 1`] = `
<div>
  <ul
    class="css-1goluyv-boxStyles"
  >
    <li
      class="css-vtop7u-boxStyles-FeatureLinkListItem"
    >
      <div
        class="css-18jic7b-boxStyles-FeatureLinkListItem"
      >
        <div
          class="css-1wcx0lf-boxStyles"
        >
          <span
            class="css-1esljmy-boxStyles"
          >
            <a
              class="css-1ovmco1-TextLink-FeatureLinkListItem"
              href="#"
            >
              Add a business with RAM
            </a>
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="css-1ovc7ig-Icon"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12L20 12"
          />
          <path
            d="M16 7L21 12L16 17"
          />
        </svg>
      </div>
    </li>
    <li
      class="css-vtop7u-boxStyles-FeatureLinkListItem"
    >
      <div
        class="css-18jic7b-boxStyles-FeatureLinkListItem"
      >
        <div
          class="css-1wcx0lf-boxStyles"
        >
          <span
            class="css-1esljmy-boxStyles"
          >
            <a
              class="css-1ovmco1-TextLink-FeatureLinkListItem"
              href="#"
            >
              Accept an invite
            </a>
          </span>
        </div>
        <svg
          aria-hidden="true"
          class="css-1ovc7ig-Icon"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12L20 12"
          />
          <path
            d="M16 7L21 12L16 17"
          />
        </svg>
      </div>
    </li>
  </ul>
</div>
`;
